# F2X_NeuroHub_Station

./: .gitignore  build.bat  package.json  pyproject.toml  pytest.ini  run.bat  run.sh  run_station1.bat  run_station1.sh  run_station2.bat  run_station2.sh  station_service.spec  test_zmq.py  test_zmq_client.py  test_zmq_server.py
.github/workflows/: build-release.yml  release.yml
config/: station.yaml  station.yaml.bak.20260107_105656  station.yaml.bak.20260107_112948  station.yaml.bak.20260107_113007  station.yaml.bak.20260107_113024  station.yaml.bak.20260109_145544  station.yaml.bak.20260109_160822  station.yaml.bak.20260109_160827  station.yaml.bak.20260110_162715  station.yaml.example  station1.yaml  station2.yaml
deploy/: README_PORTABLE.md  deploy_local.ps1  manage_portable.bat  run_portable.bat  update_portable.bat
sequences/: __init__.py
sequences/eol_force_test/: hardware_adapter.py  manifest.yaml  sequence.py
sequences/mock_success/: main.py  manifest.yaml  sequence.py
sequences/psa_sensor_test/: manifest.yaml
sequences/stm32_firmware_upload/: __init__.py  manifest.yaml
static/: index.html
static/assets/: index-B9d5tf3W.js  index-C5j0fK0T.css  query-nDuVABiU.js  state-CkuP8Qb0.js  vendor-Br0po5n5.js
station_service/: __init__.py  main.py  tray.py
station_service/api/: __init__.py  dependencies.py  websocket.py
station_ui/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
station_ui/src/: App.tsx  (+2 more)
tests/: __init__.py  conftest.py
(+260 files in other folders)
