[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "station-service"
version = "1.0.0"
description = "Station Service for test sequence execution"
requires-python = ">=3.10"
authors = [
    { name = "F2X", email = "dev@f2x.com" }
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyzmq>=25.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "structlog>=23.0.0",
    "httpx>=0.24.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "station-service-sdk @ git+https://github.com/Soochol/station-service-sdk.git",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["station_service"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
